--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.20)
 project(00s-engine)
 
 set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 
 find_package(GLEW REQUIRED)
 include_directories(${GLEW_INCLUDE_DIRS})
@@ -26,8 +26,9 @@ add_executable(a
     input.cpp
     main.cpp
     material.cpp
-    mesh.cpp
+    renderable_mesh.cpp
     mesh_cube.cpp
+    mesh_quad.cpp
     mesh_triangle.cpp
     shader.cpp
     shape_generator.cpp
