math folder; normal_generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.20)
 project(00s-engine)
 
 set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23 -g")
 
 find_package(GLEW REQUIRED)
 include_directories(${GLEW_INCLUDE_DIRS})
@@ -27,6 +27,7 @@ set(SOURCES
     light.cpp
     main.cpp
     material.cpp
+    math/normal_generator.cpp
     mesh/mesh_cube.cpp
     mesh/mesh_line.cpp
     mesh/mesh_model.cpp
@@ -41,10 +42,13 @@ set(SOURCES
     texture.cpp
     texture_loader.cpp
     timer.cpp
+    util/array2d.cpp
     video.cpp
 )
 
 add_executable(a ${SOURCES})
 
 target_include_directories(a PRIVATE mesh)
+target_include_directories(a PRIVATE math)
+target_include_directories(a PRIVATE util)
 target_link_libraries(a OpenGL::OpenGL GLEW::GLEW glfw)
